terraform/alb.tf
# ------------------------------------------------------
# The Application Load Balancer (Public)
# ------------------------------------------------------
resource "aws_lb" "main" {
  name               = "zerogate-alb"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb_sg.id]
  subnets            = [aws_subnet.public_1.id, aws_subnet.public_2.id]

  tags = {
    Name = "zerogate-alb"
  }
}

# ------------------------------------------------------
# Target Group (Connecting ALB to ECS)
# ------------------------------------------------------
resource "aws_lb_target_group" "gateway_tg" {
  name        = "zerogate-gateway-tg"
  port        = 8000
  protocol    = "HTTP"
  vpc_id      = aws_vpc.main.id
  target_type = "ip" # Required because Fargate uses awsvpc networking

  # The Health Check
  health_check {
    path                = "/api/v1/secure-data"
    matcher             = "200,401" # Accept 401 Unauthorized as a "healthy" response
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }
}

# ------------------------------------------------------
# ALB Listener
# ------------------------------------------------------
resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.main.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.gateway_tg.arn
  }
}

# ------------------------------------------------------
# Output the Public URL
# ------------------------------------------------------
output "alb_dns_name" {
  value       = aws_lb.main.dns_name
  description = "The public URL of the Zero-Trust Gateway"
}
